--- a/src/Toletus.Hub/Toletus.Hub.csproj
+++ b/src/Toletus.Hub/Toletus.Hub.csproj
@@ -11,12 +11,9 @@
       <PackageReference Include="RestSharp" Version="112.1.0" />
       <PackageReference Include="Toletus.LiteNet1" Version="8.6.1" />
       <PackageReference Include="Toletus.LiteNet2" Version="8.18.1" />
+      <PackageReference Include="Toletus.LiteNet3" Version="9.6.1" />
       <PackageReference Include="Toletus.Pack.Core" Version="8.2.1" />
       <PackageReference Include="Toletus.SM25" Version="8.6.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Toletus.LiteNet3\Toletus.LiteNet3.csproj" />
     </ItemGroup>
 
 </Project>
