Update .gitignore and upgrade package dependencies to latest versions

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all
+/Toletus.Hub.sln.DotSettings.user
