--- a/.github/workflows/main-ci-cd-net9.yml
+++ b/.github/workflows/main-ci-cd-net9.yml
@@ -26,17 +26,17 @@ jobs:
           github_ref: ${{ github.ref }}
         run: |
           version='9.${{ github.run_number }}.${{ github.run_attempt }}'
-           echo version=$version
-           echo "version=$version" >> $GITHUB_ENV
+          echo version=$version
+          echo "version=$version" >> $GITHUB_ENV
 
       - name: Build with dotnet
         run: |
-          dotnet build "src/Toletus.Hub/Toletus.Hub.csproj" --configuration Release -p:Version=${{ env.version }}
+          dotnet build "src/Toletus.Hub/Toletus.Hub.csproj" --configuration Release -p:Version=${{ env.version }} -p:PackageId=Toletus.Hub.V2
 
       - name: Create the Package
         run: |
-          dotnet pack "src/Toletus.Hub/Toletus.Hub.csproj" --configuration Release /p:PackageVersion=${{ env.version }}  #-beta
+          dotnet pack "src/Toletus.Hub/Toletus.Hub.csproj" --configuration Release /p:PackageVersion=${{ env.version }} /p:PackageId=Toletus.Hub.V2
 
       - name: Publish Toletus.Hub on Nuget
         run: |
-          dotnet nuget push "src/Toletus.Hub/bin/Release/*.nupkg" -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+          dotnet nuget push "src/Toletus.Hub/bin/Release/*.nupkg" -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
